Ajout du favicon + titre SEO

--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,19 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <title>YTB Random - Regarde une vidéo YouTube aléatoire</title>
+  <meta name="description" content="Clique et découvre une vidéo YouTube totalement aléatoire, sans savoir ce qui t'attend. C'est rapide, fun, et sans pub.">
+
+   <!-- Meta SEO -->
+  <meta property="og:title" content="YTB Random - Vidéo aléatoire" />
+  <meta property="og:description" content="Découvre une vidéo YouTube aléatoire à chaque clic. Simple. Rapide. Fun." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ytbrandom.shop/">
+  <link rel="icon" type="image/png" href="favicon.png">
+
+
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Le Bouton Vidéo Aléatoire</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
