modification index (pub, SEO, etc)

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>YTB Random - Regarde une vidéo YouTube aléatoire</title>
+
+    <!-- ✅ CODE ADSENSE POUR VALIDATION -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3250202017426010"
+     crossorigin="anonymous"></script>
+     
   <meta name="description" content="Clique et découvre une vidéo YouTube totalement aléatoire, sans savoir ce qui t'attend. C'est rapide, fun, et sans pub.">
 
   <!-- Meta SEO -->
