--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>YTB Random - Regarde une vidéo YouTube aléatoire</title>
-
-    <!-- ✅ CODE ADSENSE POUR VALIDATION -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3250202017426010"
-     crossorigin="anonymous"></script>
-     
+ 
   <meta name="description" content="Clique et découvre une vidéo YouTube totalement aléatoire, sans savoir ce qui t'attend. C'est rapide, fun, et sans pub.">
 
   <!-- Meta SEO -->
@@ -16,10 +12,6 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://ytbrandom.shop/">
   <link rel="icon" type="image/png" href="favicon.png">
-
-  <!-- Google AdSense -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4993744918084781"
-     crossorigin="anonymous"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
@@ -131,5 +123,8 @@
       });
     });
   </script>
+
+  <script type='text/javascript' src='//pl27269725.profitableratecpm.com/6d/55/02/6d5502359cbfd50a2a9a003e35d9e991.js'></script>
+
 </body>
 </html>
