Ajout de la bannière publicitaire 160x600 sur la barre latérale

--- a/public/index.html
+++ b/public/index.html
@@ -52,14 +52,17 @@
   <div class="flex flex-col lg:flex-row flex-grow" style="min-height: calc(100vh - 60px);">
     <aside class="w-full lg:w-64 bg-gray-800 p-4 border-r border-gray-700 hidden lg:flex lg:flex-col">
       <h2 class="text-lg font-bold mb-4" data-key="adTitle">Publicité</h2>
-      <!-- Bloc Pub Google -->
-      <ins class="adsbygoogle"
-        style="display:block"
-        data-ad-client="ca-pub-4993744918084781"
-        data-ad-slot="1234567890"
-        data-ad-format="auto"
-        data-full-width-responsive="true"></ins>
-      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+
+      <script type="text/javascript">
+        atOptions = {
+          'key' : '9238c2b5eaaf29fde32d2c1ddfd0a4e7',
+          'format' : 'iframe',
+          'height' : 600,
+          'width' : 160,
+          'params' : {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/9238c2b5eaaf29fde32d2c1ddfd0a4e7/invoke.js"></script>
     </aside>
 
     <main class="flex-grow p-4 lg:p-8">
