--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,10 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>YTB Random - Regarde une vidéo YouTube aléatoire</title>
+  <title data-key="metaTitle">YTB Random - Regarde une vidéo YouTube aléatoire</title>
  
-  <meta name="description" content="Clique et découvre une vidéo YouTube totalement aléatoire, sans savoir ce qui t'attend. C'est rapide, fun, et sans pub.">
+  <meta name="description" content="Clique et découvre une vidéo YouTube totalement aléatoire, sans savoir ce qui t'attend. C'est rapide, fun, et sans pub." data-key="metaDescription">
 
-  <!-- Meta SEO -->
   <meta property="og:title" content="YTB Random - Vidéo aléatoire" />
   <meta property="og:description" content="Découvre une vidéo YouTube aléatoire à chaque clic. Simple. Rapide. Fun." />
   <meta property="og:type" content="website" />
@@ -32,6 +31,11 @@
     .lang-flag:hover, .lang-flag.active { transform: scale(1.2); filter: grayscale(0%); opacity: 1; }
     .spinner { animation: spin 1s linear infinite; display: inline-block; margin-right: 0.75rem; width: 1.25rem; height: 1.25rem; border: 3px solid rgba(255,255,255,0.3); border-top-color: #fff; border-radius: 50%; }
     @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+    /* Style pour l'historique */
+    .history-item { display: flex; align-items: center; gap: 0.75rem; padding: 0.5rem; border-radius: 0.375rem; background-color: #1f2937; transition: background-color 0.2s; }
+    .history-item:hover { background-color: #374151; }
+    .history-item img { width: 80px; height: 45px; border-radius: 0.25rem; object-fit: cover; }
+    .history-item span { flex-grow: 1; font-size: 0.875rem; color: #d1d5db; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; }
   </style>
 </head>
 <body class="bg-gray-900 text-gray-200">
@@ -44,15 +48,14 @@
       <span class="lang-flag" data-lang="de" title="Deutsch">🇩🇪</span>
     </div>
     <div class="flex items-center space-x-2">
-      <a href="#" class="category-link px-4 py-2 rounded-md text-sm font-bold" data-category="all">ALL</a>
-      <a href="#" class="category-link px-4 py-2 rounded-md text-sm font-bold" data-category="music">MUSIQUE</a>
+      <a href="#" class="category-link px-4 py-2 rounded-md text-sm font-bold" data-category="all" data-key="catAll">ALL</a>
+      <a href="#" class="category-link px-4 py-2 rounded-md text-sm font-bold" data-category="music" data-key="catMusic">MUSIQUE</a>
     </div>
   </nav>
 
   <div class="flex flex-col lg:flex-row flex-grow" style="min-height: calc(100vh - 60px);">
     <aside class="w-full lg:w-64 bg-gray-800 p-4 border-r border-gray-700 hidden lg:flex lg:flex-col">
       <h2 class="text-lg font-bold mb-4" data-key="adTitle">Publicité</h2>
-
       <script type="text/javascript">
         atOptions = {
           'key' : '9238c2b5eaaf29fde32d2c1ddfd0a4e7',
@@ -82,15 +85,16 @@
           <p data-key="welcomeSub" class="mt-2 text-lg text-gray-400">Cliquez sur le bouton à droite pour commencer.</p>
         </div>
       </div>
-
+      
+      <div class="lg:hidden mt-4 flex justify-center">
+        </div>
+      
       <div id="videoInfo" class="mt-4 p-4 bg-gray-800 rounded-lg hidden">
         <h3 id="videoTitle" class="text-xl font-bold">Titre de la vidéo</h3>
+        <button id="shareBtn" class="mt-2 bg-blue-600 hover:bg-blue-700 text-white text-sm py-2 px-4 rounded" data-key="shareButton">
+          Partager cette vidéo
+        </button>
       </div>
-
-      <!-- Bouton Partager -->
-      <button id="shareBtn" class="mt-4 bg-blue-600 hover:bg-blue-700 text-white py-2 px-4 rounded">
-        Partager cette vidéo
-      </button>
     </main>
 
     <aside class="w-full lg:w-80 bg-gray-800 p-6 border-l border-gray-700 flex flex-col space-y-8">
@@ -109,13 +113,9 @@
     </aside>
   </div>
 
-  <!-- Intégration du client JS -->
   <script src="/script.js"></script>
-
-  <!-- Script Partage -->
-  <script>
-    const shareBtn = document.getElementById('shareBtn');
-    shareBtn.addEventListener('click', () => {
+  <script src="/lang.js"></script> <script>
+    document.getElementById('shareBtn').addEventListener('click', () => {
       const videoId = window.currentVideoId;
       if (!videoId) return alert("Aucune vidéo active.");
       const shareUrl = `${window.location.origin}?v=${videoId}`;
