Ajout de la catégorie 'Vidéo'

--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,7 @@
     </div>
     <div class="flex items-center space-x-2">
       <a href="#" class="category-link px-4 py-2 rounded-md text-sm font-bold" data-category="all" data-key="catAll">ALL</a>
+      <a href="#" class="category-link px-4 py-2 rounded-md text-sm font-bold" data-category="video" data-key="catVideo">VIDEO</a>
       <a href="#" class="category-link px-4 py-2 rounded-md text-sm font-bold" data-category="music" data-key="catMusic">MUSIQUE</a>
     </div>
   </nav>
