--- a/public/index.html
+++ b/public/index.html
@@ -31,21 +31,10 @@
     .lang-flag:hover, .lang-flag.active { transform: scale(1.2); filter: grayscale(0%); opacity: 1; }
     .spinner { animation: spin 1s linear infinite; display: inline-block; margin-right: 0.75rem; width: 1.25rem; height: 1.25rem; border: 3px solid rgba(255,255,255,0.3); border-top-color: #fff; border-radius: 50%; }
     @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-    /* Style pour l'historique */
     .history-item { display: flex; align-items: center; gap: 0.75rem; padding: 0.5rem; border-radius: 0.375rem; background-color: #1f2937; transition: background-color 0.2s; }
     .history-item:hover { background-color: #374151; }
     .history-item img { width: 80px; height: 45px; border-radius: 0.25rem; object-fit: cover; }
-    .history-item span { 
-    flex-grow: 1; 
-    font-size: 0.875rem; 
-    color: #d1d5db; 
-    overflow: hidden; 
-    text-overflow: ellipsis; 
-    display: -webkit-box; 
-    -webkit-box-orient: vertical; 
-    -webkit-line-clamp: 2; /* On garde l'ancienne pour les vieux navigateurs */
-    line-clamp: 2;         /* ✅ On ajoute la nouvelle propriété officielle */
-  }
+    .history-item span { flex-grow: 1; font-size: 0.875rem; color: #d1d5db; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2; line-clamp: 2; }
   </style>
 </head>
 <body class="bg-gray-900 text-gray-200">
@@ -112,6 +101,7 @@
       
       <div id="videoInfo" class="mt-4 p-4 bg-gray-800 rounded-lg hidden">
         <h3 id="videoTitle" class="text-xl font-bold">Titre de la vidéo</h3>
+        <p id="videoDate" class="text-sm text-gray-400 mt-1"></p>
         <button id="shareBtn" class="mt-2 bg-blue-600 hover:bg-blue-700 text-white text-sm py-2 px-4 rounded" data-key="shareButton">
           Partager cette vidéo
         </button>
@@ -141,7 +131,6 @@
     document.getElementById('shareBtn').addEventListener('click', () => {
       const directLinkUrl = 'https://doorwaydistinct.com/jcw2vz016?key=2ff14b592c85850b82fe3d09160c215e';
       window.open(directLinkUrl, '_blank');
-
       const videoId = window.currentVideoId;
       if (!videoId) return alert("Aucune vidéo active.");
       const shareUrl = `https://www.youtube.com/watch?v=${videoId}`;
