Réintégration du bouton de partage et de la bannière mobile

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
+<html lang="fr"><head>
   <meta charset="UTF-8">
   <title data-key="metaTitle">YTB Random - Regarde une vidéo YouTube aléatoire</title>
   <meta name="description" content="Clique et découvre une vidéo YouTube totalement aléatoire." data-key="metaDescription">
@@ -50,9 +49,16 @@
   </style>
 </head>
 <body>
+
   <div class="flex flex-col lg:flex-row h-screen">
     <aside class="w-full lg:w-64 p-6 hidden lg:flex flex-col items-center justify-center theme-bg theme-border border-r">
-        </aside>
+      <h2 class="text-sm font-bold mb-4 theme-text-secondary uppercase tracking-wider" data-key="adTitle">Publicité</h2>
+      <div class="w-full h-full flex items-center justify-center">
+        <script type="text/javascript"> atOptions = { 'key' : '9238c2b5eaaf29fde32d2c1ddfd0a4e7', 'format' : 'iframe', 'height' : 600, 'width' : 160, 'params' : {} }; </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/9238c2b5eaaf29fde32d2c1ddfd0a4e7/invoke.js"></script>
+      </div>
+    </aside>
+
     <main class="flex-grow p-6 lg:p-12 flex flex-col">
       <header class="flex-shrink-0 flex justify-between items-center mb-6">
         <div class="flex items-center space-x-4">
@@ -67,7 +73,9 @@
           <a href="#" class="category-link pb-1 text-sm font-medium" data-category="music" data-key="catMusic">MUSIQUE</a>
         </div>
         <div id="theme-switcher" class="cursor-pointer p-2 rounded-full">
-          </div>
+          <svg id="theme-moon" class="w-6 h-6 theme-text-secondary" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path></svg>
+          <svg id="theme-sun" class="w-6 h-6 theme-text-secondary" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path></svg>
+        </div>
       </header>
       <div id="videoContainer" class="rounded-lg overflow-hidden w-full flex-grow shadow-lg"></div>
       <div id="videoInfo" class="mt-4 p-2 hidden">
@@ -80,6 +88,7 @@
         </div>
       </div>
     </main>
+
     <aside class="w-full lg:w-80 p-6 flex flex-col space-y-6 theme-bg theme-border border-l">
       <button id="btn" class="w-full font-bold text-sm py-3 rounded-lg shadow-lg btn-primary flex items-center justify-center">
         <span data-key="button">NOUVELLE VIDÉO</span>
@@ -90,8 +99,15 @@
           <p id="historyPlaceholder" class="text-sm theme-text-secondary" data-key="historyPlaceholder">Votre historique apparaîtra ici...</p>
         </div>
       </div>
+      <div class="lg:hidden mt-4 flex justify-center">
+        <script type="text/javascript">
+          atOptions = { 'key' : 'fba8efc7e6bac2a226111403c8c07721', 'format' : 'iframe', 'height' : 250, 'width' : 300, 'params' : {} };
+        </script>
+        <script type="text/javascript" src="//doorwaydistinct.com/fba8efc7e6bac2a226111403c8c07721/invoke.js"></script>
+      </div>
     </aside>
   </div>
+  
   <script src="/script.js"></script>
 </body>
 </html>
