--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,12 @@
   <link rel="icon" type="image/png" href="favicon.png">
 
   <style>
-    /* --- Styles de Base --- */
     body { font-family: 'Inter', sans-serif; transition: background-color 0.3s, color 0.3s; }
     .spinner { animation: spin 1s linear infinite; display: inline-block; width: 1.25rem; height: 1.25rem; border: 3px solid rgba(0,0,0,0.2); border-top-color: #000; border-radius: 50%; }
     .dark .spinner { border-color: rgba(255,255,255,0.2); border-top-color: #fff; }
     #videoContainer { position: relative; width: 100%; padding-top: 56.25%; background-color: #e2e8f0; }
     .dark #videoContainer { background-color: #000; }
     #player { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
-
-    /* --- Thème Clair (par défaut) --- */
     body { background-color: #f8fafc; color: #0f172a; }
     .theme-bg { background-color: #ffffff; }
     .theme-text-secondary { color: #64748b; }
@@ -31,8 +28,6 @@
     .history-item:hover { background-color: #f1f5f9; }
     #theme-moon { display: block; }
     #theme-sun { display: none; }
-
-    /* --- Thème Sombre (activé avec la classe .dark) --- */
     .dark body { background-color: #020617; color: #e2e8f0; }
     .dark .theme-bg { background-color: #0f172a; }
     .dark .theme-text-secondary { color: #94a3b8; }
@@ -43,8 +38,6 @@
     .dark .history-item:hover { background-color: #1e293b; }
     .dark #theme-moon { display: none; }
     .dark #theme-sun { display: block; }
-
-    /* --- Styles Communs Minimalistes --- */
     .btn-primary { transition: background-color 0.15s ease-out; }
     .btn-primary:disabled { opacity: 0.7; cursor: not-allowed; }
     .category-link { border-bottom: 2px solid transparent; transition: all 0.2s; color: #64748b; }
@@ -54,25 +47,14 @@
     .history-item span { flex-grow: 1; font-size: 0.875rem; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2; line-clamp: 2; }
     .lang-flag { cursor: pointer; transition: transform 0.2s; filter: grayscale(80%); opacity: 0.7; }
     .lang-flag:hover, .lang-flag.active { transform: scale(1.2); filter: grayscale(0%); opacity: 1; }
-    
-    /* Animation "Fade-in" */
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-    .fade-in {
-      animation: fadeIn 0.5s ease-out forwards;
-    }
-    
-    /* Styles pour les boutons de partage */
-    .share-btn {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      width: 2.5rem; /* 40px */
-      height: 2.5rem; /* 40px */
-      border-radius: 9999px; /* Cercle */
-    }
+    @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+    .fade-in { animation: fadeIn 0.5s ease-out forwards; }
+    .share-btn { display: inline-flex; align-items: center; justify-content: center; width: 2.5rem; height: 2.5rem; border-radius: 9999px; }
+    .copy-history-btn { padding: 0.25rem 0.75rem; font-size: 0.75rem; font-weight: 500; border-radius: 0.375rem; transition: background-color 0.2s; flex-shrink: 0; }
+    .copy-history-btn { background-color: #e2e8f0; color: #334155; }
+    .copy-history-btn:hover { background-color: #cbd5e1; }
+    .dark .copy-history-btn { background-color: #334155; color: #cbd5e1; }
+    .dark .copy-history-btn:hover { background-color: #475569; }
   </style>
 </head>
 <body>
@@ -137,6 +119,10 @@
     </aside>
   </div>
   
+  <div id="toast" class="fixed bottom-8 right-8 px-5 py-3 rounded-lg text-white shadow-lg opacity-0 transition-all duration-300">
+    <span id="toast-message"></span>
+  </div>
+
   <script src="/script.js"></script>
   <script src="/lang.js"></script>
 </body>
